<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ak.whatanimalareyou.MainActivity"
    android:addStatesFromChildren="true"
    android:background="@android:color/white">

    <Button
        android:text="Next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button"
        android:background="@android:color/white"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"/>

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statementTextView"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:id="@+id/markRadioGroup"
        android:orientation="vertical"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true">

        <RadioButton android:id="@+id/radio_strongly_agree"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/strongly_agree"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_agree"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/agree"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_not_sure"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/not_sure"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_disagree"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/disagree"
                     android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_strongly_disagree"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/strongly_disagree"
                     android:onClick="onRadioButtonClicked"/>

    </RadioGroup>
</RelativeLayout>
